--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AkDevStudio</title>
+  <title>AK Dev Studio | Global Angular Development Services | USA, UK, India</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="AK Dev Studio offers world-class Angular development services for global clients, specializing in Banking, Healthcare, and Telecom sectors. 10+ years of experience serving USA, UK, and international markets.">
+  <meta name="keywords" content="AK Dev Studio, Global Angular Development, Offshore Web Development, USA, UK, India, International Software Services, Banking Software, Healthcare Applications, Telecom Solutions, Angular, TypeScript, JavaScript, RxJS, NGRX, RESTful APIs">
+  <meta name="author" content="AK Dev Studio">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.akdevstudio.com/">
+  <meta property="og:title" content="AK Dev Studio | Global Angular Development Services">
+  <meta property="og:description" content="World-class Angular development services for USA, UK, and global markets. Specializing in Banking, Healthcare, and Telecom with 10+ years of international experience.">
+  <meta property="og:image" content="https://www.akdevstudio.com/assets/ak-dev-studio-global.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.akdevstudio.com/">
+  <meta property="twitter:title" content="AK Dev Studio | Global Angular Development Services">
+  <meta property="twitter:description" content="World-class Angular development services for USA, UK, and global markets. Specializing in Banking, Healthcare, and Telecom with 10+ years of international experience.">
+  <meta property="twitter:image" content="https://www.akdevstudio.com/assets/ak-dev-studio-global.jpg">
+
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="canonical" href="https://www.akdevstudio.com/">
+  
+  <!-- Structured Data for LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "ProfessionalService",
+    "name": "AK Dev Studio",
+    "description": "Global Angular development services specializing in Banking, Healthcare, and Telecom sectors for USA, UK, and international markets.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Chennai",
+      "addressRegion": "Tamil Nadu",
+      "addressCountry": "India"
+    },
+    "telephone": "+91 9566087098",
+    "email": "anishkumar92@gmail.com",
+    "url": "https://www.akdevstudio.com",
+    "sameAs": [
+      "https://www.linkedin.com/in/anish-srinivaasan/",
+      "https://github.com/anishkumar92"
+    ],
+    "serviceArea": ["USA", "UK", "Global"],
+    "knowsLanguage": ["en", "hi", "ta"]
+  }
+  </script>
 </head>
 <body>
   <app-root></app-root>
