--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
 
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="canonical" href="https://www.akdevstudio.com/">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   
   <!-- Structured Data for LocalBusiness -->
   <script type="application/ld+json">
